syntax ="proto3";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
option go_package="github.com/iansmith/parigot/g/pb/parigot;parigot";
package pb.parigot;


extend google.protobuf.ServiceOptions {
  optional bool always_pull_up_parameters = 543212;
  optional bool always_pull_up_output = 543213;
  optional bool no_package = 543211;
  optional bool kernel_service = 543214;
  optional string wasm_service_name = 543210;
}
extend google.protobuf.MethodOptions {
  optional bool pull_parameters_up = 543211;
  optional bool pull_output_up = 543213;
  optional string wasm_method_name = 543210;
  optional bool abi_call = 543212;
}
extend google.protobuf.FieldOptions {
  optional string wasm_field_name = 543210;
}

extend google.protobuf.FileOptions {
  optional bool abi = 543210;
}
extend google.protobuf.MessageOptions {
  optional string wasm_message_name = 543210;
}

enum LogLevel {
  LOGLEVEL_UNSPECIFIED = 0;
  LOGLEVEL_FATAL  =1;
  LOGLEVEL_ERROR  =2;
  LOGLEVEL_WARNING  =3;
  LOGLEVEL_INFO  =4;
  LOGLEVEL_DEBUG  =5;
}

message LocateErrorId {
  uint64 high = 1;
  uint64 low = 2;
}

message DispatchErrorId {
  uint64 high = 1;
  uint64 low = 2;
}

message RegisterErrorId {
  uint64 high = 1;
  uint64 low = 2;
}

message ServiceId {
  uint64 high = 1;
  uint64 low = 2;
}

message PCtx {
  repeated PCtxEvent event = 1;
}
message PCtxEvent {
  repeated PCtxMessage line = 1;
}
message PCtxMessage {
  google.protobuf.Timestamp stamp = 1;
  LogLevel level = 2;
  string producer = 3;
  string message = 4;
}
